--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -461,7 +461,7 @@ git push -u origin master</code></pre>
 </section>
   </div>
   <div class="slide hidden " id="slide-9">
-    <section class="slide-content"><h3 id="i-can-haz-project-pages-">I can Haz Project Pages?</h3>
+    <section class="slide-content"><h3 id="i-can-haz-project-pages-">I can haz Project Pages?</h3>
 <p>Project Pages are kept in the same repository as their project.</p>
 <p>The URL for a personal account&#39;s Project Page will be <code>http(s)://&lt;username&gt;.github.io/&lt;projectname&gt;</code></p>
 <p>Project Pages differences:</p>
