add some images

--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -458,20 +458,21 @@ git push -u origin master</code></pre>
     <section class="slide-content"><h3 id="step-5">Step 5</h3>
 <p>...and you&#39;re done!</p>
 <p>Fire up a browser and go to <a href="http://username.github.io">http://username.github.io</a>.</p>
-</section>
+<video src="flying.mp4" controls autoplay loop /></section>
   </div>
   <div class="slide hidden " id="slide-9">
     <section class="slide-content"><h3 id="i-can-haz-project-pages-">I can haz Project Pages?</h3>
 <p>Project Pages are kept in the same repository as their project.</p>
 <p>The URL for a personal account&#39;s Project Page will be <code>http(s)://&lt;username&gt;.github.io/&lt;projectname&gt;</code></p>
 <p>Project Pages differences:</p>
-<p>The gh-pages branch is used to build and publish Project Pages sites.</p>
+<p>The <code>gh-pages</code> branch is used to build and publish Project Pages sites.</p>
 <p>Project Pages sites are served under a subpath of the User Pages site: <code>username.github.io/projectname</code></p>
 </section>
   </div>
   <div class="slide hidden " id="slide-10">
     <section class="slide-content"><h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
 <p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
+<p><img src="giphy.gif" alt="three amigos"></p>
 </section>
   </div>
   <div class="slide hidden " id="slide-11">
