--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -474,7 +474,7 @@ git push -u origin master</code></pre>
 <p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
 <p><img src="giphy.gif" alt="three amigos"></p>
 <p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"> </p>
-<p><img src="talk-github-pages/project-pages-2.jpg" alt="project-pages-2.jpg"></p>
+<p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
 </section>
   </div>
   <div class="slide hidden " id="slide-11">
