add project page images

--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -473,11 +473,17 @@ git push -u origin master</code></pre>
     <section class="slide-content"><h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
 <p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
 <p><img src="giphy.gif" alt="three amigos"></p>
-<p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"> </p>
-<p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
 </section>
   </div>
-  <div class="slide hidden " id="slide-11">
+  <div class="slide hidden  " id="slide-11">
+    <section class="slide-content"><p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"></p>
+</section>
+  </div>
+  <div class="slide hidden  " id="slide-12">
+    <section class="slide-content"><p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
+</section>
+  </div>
+  <div class="slide hidden " id="slide-13">
     <section class="slide-content"><h3 id="custom-urls">Custom URLs</h3>
 <p>Just create a file named CNAME and include your URL.</p>
 <p>After you&#39;ve created and committed your CNAME file on GitHub, do one of the following with your DNS provider:</p>
@@ -489,7 +495,7 @@ git push -u origin master</code></pre>
 </ol>
 </section>
   </div>
-  <div class="slide hidden" id="slide-12">
+  <div class="slide hidden" id="slide-14">
     <section class="slide-content"><div class="author">
   <h1 class="name">Mike Ward</h1>
     <h3 class="twitter">
