--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -456,11 +456,14 @@ git push -u origin master</code></pre>
   </div>
   <div class="slide hidden " id="slide-8">
     <section class="slide-content"><h3 id="step-5">Step 5</h3>
-<p>...and you&#39;re done!</p>
 <p>Fire up a browser and go to <a href="http://username.github.io">http://username.github.io</a>.</p>
+</section>
+  </div>
+  <div class="slide hidden -" id="slide-9">
+    <section class="slide-content"><h3 id="and-this-is-how-you-feel-">And this is how you feel...</h3>
 <video src="flying.mp4" controls autoplay loop /></section>
   </div>
-  <div class="slide hidden " id="slide-9">
+  <div class="slide hidden " id="slide-10">
     <section class="slide-content"><h3 id="i-can-haz-project-pages-">I can haz Project Pages?</h3>
 <p>Project Pages are kept in the same repository as their project.</p>
 <p>The URL for a personal account&#39;s Project Page will be <code>http(s)://&lt;username&gt;.github.io/&lt;projectname&gt;</code></p>
@@ -469,22 +472,22 @@ git push -u origin master</code></pre>
 <p>Project Pages sites are served under a subpath of the User Pages site: <code>username.github.io/projectname</code></p>
 </section>
   </div>
-  <div class="slide hidden " id="slide-10">
-    <section class="slide-content"><h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
-<p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
-<p><img src="giphy.gif" alt="three amigos"></p>
-</section>
-  </div>
   <div class="slide hidden  " id="slide-11">
-    <section class="slide-content"><p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"></p>
+    <section class="slide-content"><h3 id="create-branch">Create branch</h3>
+<p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"></p>
 </section>
   </div>
   <div class="slide hidden  " id="slide-12">
-    <section class="slide-content"><p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
+    <section class="slide-content"><h3 id="push-to-github">Push to GitHub</h3>
+<p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
 </section>
   </div>
   <div class="slide hidden " id="slide-13">
-    <section class="slide-content"><h3 id="custom-urls">Custom URLs</h3>
+    <section class="slide-content"><h3 id="feel-good-again-">Feel Good (Again)</h3>
+<p><img src="giphy.gif" alt="three amigos"></p>
+<h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
+<p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
+<h3 id="custom-urls">Custom URLs</h3>
 <p>Just create a file named CNAME and include your URL.</p>
 <p>After you&#39;ve created and committed your CNAME file on GitHub, do one of the following with your DNS provider:</p>
 <ol>
