add project page images

--- a/talk-github-pages.html
+++ b/talk-github-pages.html
@@ -461,6 +461,8 @@ git push -u origin master</code></pre>
   </div>
   <div class="slide hidden -" id="slide-9">
     <section class="slide-content"><h3 id="and-this-is-how-you-feel-">And this is how you feel...</h3>
+<p>&nbsp;</p>
+
 <video src="flying.mp4" controls autoplay loop /></section>
   </div>
   <div class="slide hidden " id="slide-10">
@@ -474,20 +476,36 @@ git push -u origin master</code></pre>
   </div>
   <div class="slide hidden  " id="slide-11">
     <section class="slide-content"><h3 id="create-branch">Create branch</h3>
+<p>&nbsp;</p>
+
 <p><img src="project-pages-1.jpg" alt="project-pages-1.jpg"></p>
 </section>
   </div>
   <div class="slide hidden  " id="slide-12">
     <section class="slide-content"><h3 id="push-to-github">Push to GitHub</h3>
+<p>&nbsp;</p>
+
 <p><img src="project-pages-2.jpg" alt="project-pages-2.jpg"></p>
 </section>
   </div>
   <div class="slide hidden " id="slide-13">
+    <section class="slide-content"><p>Open up your browser...</p>
+</section>
+  </div>
+  <div class="slide hidden " id="slide-14">
     <section class="slide-content"><h3 id="feel-good-again-">Feel Good (Again)</h3>
+<p>&nbsp;</p>
+
 <p><img src="giphy.gif" alt="three amigos"></p>
-<h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
+</section>
+  </div>
+  <div class="slide hidden " id="slide-15">
+    <section class="slide-content"><h3 id="blogging-with-jekyll">Blogging with Jekyll</h3>
 <p><a href="https://github.com/barryclark/jekyll-now">Jekyll Now</a></p>
-<h3 id="custom-urls">Custom URLs</h3>
+</section>
+  </div>
+  <div class="slide hidden " id="slide-16">
+    <section class="slide-content"><h3 id="custom-urls">Custom URLs</h3>
 <p>Just create a file named CNAME and include your URL.</p>
 <p>After you&#39;ve created and committed your CNAME file on GitHub, do one of the following with your DNS provider:</p>
 <ol>
@@ -498,7 +516,7 @@ git push -u origin master</code></pre>
 </ol>
 </section>
   </div>
-  <div class="slide hidden" id="slide-14">
+  <div class="slide hidden" id="slide-17">
     <section class="slide-content"><div class="author">
   <h1 class="name">Mike Ward</h1>
     <h3 class="twitter">
